--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <div id="root"></div>
-    <script type="module" src="index.635c02d9.js"></script>
+    <script type="module" src="../Scripts/index.635c02d9.js"></script>
 </body>
 
 </html>
