--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Food Villa</title>
-    <link rel="stylesheet" href="index.4226ca31.css">
+    <link rel="stylesheet" href="/index.4226ca31.css">
 </head>
 
 <body>
     <div id="root"></div>
-    <script type="module" src="index.635c02d9.js"></script>
+    <script type="module" src="/index.635c02d9.js"></script>
 </body>
 
 </html>
